force-app/main/default/objects/Legal_Document__c/Legal_Document__c.object-meta.xml
<CustomObject>
    <label>Legal Document</label>
    <nameField>
        <label>Legal Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>