force-app/main/default/objects/Legal_Document__c/fields/atas_nama_hutang__c.field-meta.xml
<CustomField>
    <fullName>atas_nama_hutang__c</fullName>
    <label>atas_nama_hutang</label>
    <length>255</length>
    <type>Text</type>
</CustomField>