force-app/main/default/objects/Legal_Document__c/fields/bank_bfi__c.field-meta.xml
<CustomField>
    <fullName>bank_bfi__c</fullName>
    <label>bank_bfi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>