force-app/main/default/objects/Legal_Document__c/fields/bank_hold__c.field-meta.xml
<CustomField>
    <fullName>bank_hold__c</fullName>
    <label>bank_hold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>