force-app/main/default/objects/Legal_Document__c/fields/bank_imb__c.field-meta.xml
<CustomField>
    <fullName>bank_imb__c</fullName>
    <label>bank_imb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>