force-app/main/default/objects/Legal_Document__c/fields/bank_notaris__c.field-meta.xml
<CustomField>
    <fullName>bank_notaris__c</fullName>
    <label>bank_notaris</label>
    <length>255</length>
    <type>Text</type>
</CustomField>