force-app/main/default/objects/Legal_Document__c/fields/Is_Legal_Document_Checklist_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Legal_Document_Checklist_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Legal Document Checklist Complete</label>
    <type>Checkbox</type>
</CustomField>