force-app/main/default/objects/Legal_Document__c/fields/Is_Surat_Roya_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Surat_Roya_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Surat_Roya_Complete</label>
    <type>Checkbox</type>
</CustomField>