force-app/main/default/objects/Legal_Document__c/fields/jumlah_angsuran_hold__c.field-meta.xml
<CustomField>
    <fullName>jumlah_angsuran_hold__c</fullName>
    <label>Jumlah Angsuran Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>