force-app/main/default/objects/Legal_Document__c/fields/kanca_hold__c.field-meta.xml
<CustomField>
    <fullName>kanca_hold__c</fullName>
    <label>kanca_hold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>