force-app/main/default/objects/Legal_Document__c/fields/kanca_hutang__c.field-meta.xml
<CustomField>
    <fullName>kanca_hutang__c</fullName>
    <label>kanca_hutang</label>
    <length>255</length>
    <type>Text</type>
</CustomField>