force-app/main/default/objects/Legal_Document__c/fields/kanca_kk__c.field-meta.xml
<CustomField>
    <fullName>kanca_kk__c</fullName>
    <label>kanca_kk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>