force-app/main/default/objects/Legal_Document__c/fields/kanca_kontrak__c.field-meta.xml
<CustomField>
    <fullName>kanca_kontrak__c</fullName>
    <label>kanca_kontrak</label>
    <length>255</length>
    <type>Text</type>
</CustomField>