force-app/main/default/objects/Legal_Document__c/fields/kanca_notaris__c.field-meta.xml
<CustomField>
    <fullName>kanca_notaris__c</fullName>
    <label>kanca_notaris</label>
    <length>255</length>
    <type>Text</type>
</CustomField>