force-app/main/default/objects/Legal_Document__c/fields/loan_id__c.field-meta.xml
<CustomField>
    <fullName>loan_id__c</fullName>
    <externalId>true</externalId>
    <label>loan_id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>