force-app/main/default/objects/Legal_Document__c/fields/Lokasi_Akad__c.field-meta.xml
<CustomField>
    <fullName>Lokasi_Akad__c</fullName>
    <label>Lokasi Akad</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>