force-app/main/default/objects/Legal_Document__c/fields/lokasi_sertifikat_general__c.field-meta.xml
<CustomField>
    <fullName>lokasi_sertifikat_general__c</fullName>
    <label>lokasi_sertifikat_general</label>
    <length>255</length>
    <type>Text</type>
</CustomField>