force-app/main/default/objects/Legal_Document__c/fields/Nama_Penyedia_Barang_dan_Jasa__c.field-meta.xml
<CustomField>
    <fullName>Nama_Penyedia_Barang_dan_Jasa__c</fullName>
    <label>Nama Penyedia Barang dan Jasa</label>
    <type>TextArea</type>
</CustomField>