force-app/main/default/objects/Legal_Document__c/fields/nama_penyedia_general__c.field-meta.xml
<CustomField>
    <fullName>nama_penyedia_general__c</fullName>
    <label>nama_penyedia_general</label>
    <length>255</length>
    <type>Text</type>
</CustomField>