force-app/main/default/objects/Legal_Document__c/fields/nik_penyedia_general__c.field-meta.xml
<CustomField>
    <fullName>nik_penyedia_general__c</fullName>
    <label>nik_penyedia_general</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>