force-app/main/default/objects/Legal_Document__c/fields/nominal_kontrak__c.field-meta.xml
<CustomField>
    <fullName>nominal_kontrak__c</fullName>
    <label>nominal_kontrak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>