force-app/main/default/objects/Legal_Document__c/fields/nominal_notaris__c.field-meta.xml
<CustomField>
    <fullName>nominal_notaris__c</fullName>
    <label>nominal_notaris</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>