force-app/main/default/objects/Legal_Document__c/fields/nominal_ntf__c.field-meta.xml
<CustomField>
    <fullName>nominal_ntf__c</fullName>
    <label>nominal_ntf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>