force-app/main/default/objects/Legal_Document__c/fields/nominal_sisa__c.field-meta.xml
<CustomField>
    <fullName>nominal_sisa__c</fullName>
    <label>nominal_sisa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>