force-app/main/default/objects/Legal_Document__c/fields/nomor_kontrak_general__c.field-meta.xml
<CustomField>
    <fullName>nomor_kontrak_general__c</fullName>
    <label>nomor_kontrak_general</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>