force-app/main/default/objects/Legal_Document__c/fields/nomor_kwitansi_general__c.field-meta.xml
<CustomField>
    <fullName>nomor_kwitansi_general__c</fullName>
    <label>nomor_kwitansi_general</label>
    <length>255</length>
    <type>Text</type>
</CustomField>