force-app/main/default/objects/Legal_Document__c/fields/norek_hold_2__c.field-meta.xml
<CustomField>
    <fullName>norek_hold_2__c</fullName>
    <label>norek_hold_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>