force-app/main/default/objects/Legal_Document__c/fields/norek_sisa__c.field-meta.xml
<CustomField>
    <fullName>norek_sisa__c</fullName>
    <label>norek_sisa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>