force-app/main/default/objects/Legal_Document__c/fields/pembayaran_kepada_hutang__c.field-meta.xml
<CustomField>
    <fullName>pembayaran_kepada_hutang__c</fullName>
    <label>pembayaran_kepada_hutang</label>
    <length>255</length>
    <type>Text</type>
</CustomField>