force-app/main/default/objects/Legal_Document__c/fields/persyaratan_sisa__c.field-meta.xml
<CustomField>
    <fullName>persyaratan_sisa__c</fullName>
    <label>Persyaratan Sisa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>