force-app/main/default/objects/Legal_Document__c/fields/Tanggal_Akad__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Akad__c</fullName>
    <label>Tanggal Akad</label>
    <type>Date</type>
</CustomField>