force-app/main/default/objects/Legal_Document__c/fields/terbilang_ntf__c.field-meta.xml
<CustomField>
    <fullName>terbilang_ntf__c</fullName>
    <label>terbilang_ntf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>