force-app/main/default/objects/Legal_Document__c/fields/terbilang_otr__c.field-meta.xml
<CustomField>
    <fullName>terbilang_otr__c</fullName>
    <label>terbilang_otr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>