force-app/main/default/objects/Legal_Document__c/fields/Terdaftar_Di__c.field-meta.xml
<CustomField>
    <fullName>Terdaftar_Di__c</fullName>
    <label>Terdaftar Di</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>