force-app/main/default/objects/Legal_Document__c/fields/tujuan_pembayaran__c.field-meta.xml
<CustomField>
    <fullName>tujuan_pembayaran__c</fullName>
    <label>tujuan_pembayaran</label>
    <length>255</length>
    <type>Text</type>
</CustomField>